style.css
body {
    padding: 0;
    margin: 0;
    background: black;
    text-align: center;
}

img {
    width: auto;
    height: calc(100vh);
}

.container {
    position: relative;
    display: inline-block;
}

.inner {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.flip {
    display: inline-block;
    width: 12.5%;
    height: 33%;
    background: black;
    opacity: 0;  /* important */
}

